--- a/MySite.html
+++ b/MySite.html
@@ -47,8 +47,7 @@
 </br>
 	<section>
 <p>
-		With the goal to get strong and take advantage of the news guidelines in the forwarding agencies and international trade born Grupo Aduanal Usamex, S.C. 
-</p>
+This is a new change</p>
 
 
 <p>
